cmake_minimum_required(VERSION 3.17)
project(study)

set(CMAKE_CXX_STANDARD 14)

add_executable(study ccf/201312-1.cpp ccf/201312-2.cpp main.cpp ccf/201312-2.h ccf/201312-3.cpp ccf/201312-3.h ccf/201403-1.cpp ccf/201403-1.h ccf/201403-2.cpp ccf/201403-2.h ccf/201403-3.cpp ccf/201403-3.h ccf/201409-1.cpp ccf/201409-1.h ccf/201409-2.cpp ccf/201409-2.h ccf/201409-3.cpp ccf/201409-3.h ccf/201412.cpp ccf/201412.h ccf/201412-3.cpp ccf/201412-3.h)