cmake_minimum_required(VERSION 3.17)
project(study)

set(CMAKE_CXX_STANDARD 14)

add_executable(study ccf/201312-1.cpp ccf/201312-2.cpp main.cpp ccf/201312-2.h ccf/201312-3.cpp ccf/201312-3.h ccf/201403-1.cpp ccf/201403-1.h ccf/201403-2.cpp ccf/201403-2.h ccf/201403-3.cpp ccf/201403-3.h ccf/201409-1.cpp ccf/201409-1.h ccf/201409-2.cpp ccf/201409-2.h ccf/201409-3.cpp ccf/201409-3.h ccf/201412.cpp ccf/201412.h ccf/201412-3.cpp ccf/201412-3.h test/operator_test.cpp test/operator_test.h ccf/201503-1.cpp ccf/201503-1.h ccf/201503-2.cpp ccf/201503-2.h ccf/201503-3.cpp ccf/201503-3.h ccf/201509-1.cpp ccf/201509-1.h ccf/201509-2.cpp ccf/201509-2.h ccf/201509-3.cpp ccf/201509-3.h ccf/201312-4.cpp ccf/201312-4.h ccf/201512-1.cpp ccf/201512-1.h ccf/201512-2.cpp ccf/201512-2.h ccf/201512-3.cpp ccf/201512-3.h ccf/201604-1.cpp ccf/201604-1.h ccf/201604-2.cpp ccf/201604-2.h)